--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss-custom-properties": "^11.0.0",
     "sanitize.css": "^12.0.1",
     "style-loader": "^2.0.0",
+    "swiper": "^7.3.1",
     "tailwindcss": "^2.2.19"
   },
   "browserslist": [
