--- a/package.json
+++ b/package.json
@@ -13,31 +13,32 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "browser-sync": "^2.27.7",
     "browser-sync-webpack-plugin": "^2.3.0",
-    "css-loader": "^5.1.1",
-    "css-minimizer-webpack-plugin": "^1.3.0",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.2.0",
     "file-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^1.3.9",
-    "node-sass": "^6.0.1",
-    "postcss": "^8.3.11",
-    "postcss-loader": "^5.0.0",
-    "sass-loader": "^11.0.1",
+    "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^7.0.0",
+    "postcss": "^8.4.4",
+    "postcss-loader": "^6.2.1",
+    "sass-loader": "^12.4.0",
+    "tailwindcss": "^2.2.19",
     "terser-webpack-plugin": "^5.2.5",
-    "webpack": "^5.64.1",
+    "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.4",
-    "autoprefixer": "^10.4.0",
+    "acorn": "^8.6.0",
     "lodash": "^4.17.21",
-    "npm-check-updates": "^11.8.5",
-    "postcss-custom-properties": "^11.0.0",
-    "sanitize.css": "^12.0.1",
-    "style-loader": "^2.0.0",
-    "swiper": "^7.3.1",
-    "tailwindcss": "^2.2.19"
+    "npm-check-updates": "^12.0.3",
+    "postcss-custom-properties": "^12.0.0",
+    "sanitize.css": "^13.0.0",
+    "style-loader": "^3.3.1",
+    "swiper": "^7.3.1"
   },
   "browserslist": [
     "defaults",
